style/style.css
h1 {
  margin-top: 30px;
}

body {
  background-color: #373737;
}

.container {
  background-color: #373737;
}

header {
  color: white;
}

.card {
  margin-bottom: 1em;
}

.card-body:hover {
  cursor: pointer;
}

.card .badge {
  margin-right: 6px;
}

.expanded .card-body:hover {
  cursor: default;
}

.expanded .card-body:hover * {
  cursor: default;
}

.card-body {
  height: 100%;
  display: flex;
  flex-direction: column;
}

.listing-text {
  flex-grow: 1;
  max-height: 150px;
  overflow: hidden;
}

.expanded .listing-text {
  max-height: 10000px;
}

/*.listing-text:before {
  content:'';
  width:100%;
  height:100%;    
  position:absolute;
  left:0;
  top:0;
  background:linear-gradient(transparent 50px, white);
  pointer-events:none;
}*/

.expanded .listing-text:before {
  display: none;
}

.btn-outline-info {
  border-color: #7289DA;
  color: #7289DA;
}

.btn-outline-info:hover {
  border-color: #7289DA;
  background-color: #7289DA;
  color: white;
}

.btn-info:focus {
  border-color: #7289DA;
  background-color: #7289DA;
  color: white;
}

.no-image {
  height: 100%;
  width: 100%;
  background-color: lightgrey;
}

.pull-right {
  float: right;
}

.created {
  font-size: 14px;
  margin-top: 5px;
}

img.discord-avatar {
  border-radius: 50%;
}

.text-bold {
  font-weight: bold;
}

.listing-text p {
  margin-bottom: 0.5em;
}

.no-listings {
  color: white;
  text-align: center;
  margin-top: 40px;
}

.filtering {
  margin-top: 40px;
  margin-bottom: 6px;
}

.search .form-control {
  width: 200px;
  display: inline-block;
}

.filtering .filter-count {
  font-size: 14px;
  margin-left: 10px;
  color: white;
}

.filtering .badge {
  margin-right: 6px;
}

.filtering .type-filter {
  text-align: right;
}

@media (max-width: 575.98px) {
  .filtering .type-filter {
    text-align: left;
  }
}

.filtering label {
  margin-bottom: 0;
  cursor: pointer;
}

hr {
  margin-top: 0;
}

